[package]
name = "tondi-scriptexec"
version = "0.1.0"
edition = "2021"
description = "Tondi Script interpreter/executor - Private implementation"
authors = ["Tondi Team <team@tondi.net>"]
license = "MIT"
repository = "https://github.com/tondinet/tondi-scriptexec"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tondiexec"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "wasm"]
json = ["serde", "serde_json"]
cli = ["json", "clap"]
wasm = ["json", "wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "getrandom/js"]

[dependencies]
# Tondi dependencies - 复用现有代码
tondi-txscript = { path = "../Tondi/crypto/txscript" }
tondi-hashes = { path = "../Tondi/crypto/hashes" }
tondi-consensus-core = { path = "../Tondi/consensus/core" }

# Core dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
lazy_static = "1.4.0"

# CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2.87", optional = true }
serde-wasm-bindgen = { version = "0.6.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", optional = true }

# Crypto dependencies - 从tondi中复用，移除重复
secp256k1 = "0.31.0"
hex = "0.4"
